runtime/Thread/TooSmallStackSize.java failed "assert(k->is_initialized()) failed: need to increase java_thread_min_stack_allowed calculation"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 19
    • Affects Version/s: 19, repo-loom
    • Component/s: hotspot
    • b21
    • x86_64
    • windows
    • Verified

      The following test failed in loom-jep-vt:

      runtime/Thread/TooSmallStackSize.java

      Here's a log file snippet:

      #section:driver
      ----------messages:(6/239)----------
      command: driver TooSmallStackSize
      reason: User specified action: run driver TooSmallStackSize
      Mode: agentvm
      Agent id: 20
      Additional exports to unnamed modules from @modules: java.base/jdk.internal.misc
      elapsed time (seconds): 0.372
      ----------configuration:(17/1600)*----------

      <snip>

      ----------System.out:(7/1719)*----------
      *** Testing -XX:ThreadStackSize=16
      Command line: [c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-19-loomvt+1-47\\windows-x64-debug.jdk\\jdk-19\\fastdebug\\bin\\java.exe -cp T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_runtime\\classes\\3\\runtime\\Thread\\TooSmallStackSize.d;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-19-loomvt+1-47\\src.full\\open\\test\\hotspot\\jtreg\\runtime\\Thread;T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_runtime\\classes\\3\\test\\lib;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\javatest.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\jtreg.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\junit.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\hamcrest.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\testng.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\jcommander.jar;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\6.1\\1\\bundles\\jtreg-6.1+1.zip\\jtreg\\lib\\guice.jar -XX:ThreadStackSize=16 -version ]
      [2022-04-28T14:23:17.076717300Z] Gathering output for process 8776
      [2022-04-28T14:23:17.189163700Z] Waiting for completion for process 8776
      [2022-04-28T14:23:17.241879500Z] Waiting for completion finished for process 8776
      [2022-04-28T14:23:17.242784300Z] Waiting for completion for process 8776
      [2022-04-28T14:23:17.242784300Z] Waiting for completion finished for process 8776
      ----------System.err:(53/3351)*----------
       stdout: [# To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=\\exceptions.cpp:240
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\utilities\\exceptions.cpp:240), pid=8776, tid=66772
      # assert(k->is_initialized()) failed: need to increase java_thread_min_stack_allowed calculation
      #
      # JRE version: Java(TM) SE Runtime Environment (19.0+1) (fastdebug build 19-loomvt+1-47)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-loomvt+1-47, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_runtime\\scratch\\2\\hs_err_pid8776.mdmp
      #
      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_tier1_runtime\\scratch\\2\\hs_err_pid8776.log
      Error occurred during initialization of VM
      java.lang.NoClassDefFoundError: Could not initialize class jdk.internal.misc.Blocker
      at java.io.FileOutputStream.write(java.base/FileOutputStream.java:367)
      at java.io.BufferedOutputStream.flushBuffer(java.base/BufferedOutputStream.java:125)
      at java.io.BufferedOutputStream.implFlush(java.base/BufferedOutputStream.java:251)
      at java.io.BufferedOutputStream.flush(java.base/BufferedOutputStream.java:239)
      at java.io.PrintStream.implWrite(java.base/PrintStream.java:644)
      at java.io.PrintStream.write(java.base/PrintStream.java:622)
      at sun.nio.cs.StreamEncoder.writeBytes(java.base/StreamEncoder.java:313)
      at sun.nio.cs.StreamEncoder.implFlushBuffer(java.base/StreamEncoder.java:409)
      at sun.nio.cs.StreamEncoder.lockedFlushBuffer(java.base/StreamEncoder.java:127)
      at sun.nio.cs.StreamEncoder.flushBuffer(java.base/StreamEncoder.java:114)
      at java.io.OutputStreamWriter.flushBuffer(java.base/OutputStreamWriter.java:193)
      at java.io.PrintStream.implWriteln(java.base/PrintStream.java:848)
      at java.io.PrintStream.writeln(java.base/PrintStream.java:825)
      at java.io.PrintStream.println(java.base/PrintStream.java:1167)
      at java.lang.System.logInitException(java.base/System.java:2076)
      at java.lang.System.initPhase2(java.base/System.java:2201)

      ];
       stderr: [Java HotSpot(TM) 64-Bit Server VM warning: Potentially dangerous stack overflow in ReservedStackAccess annotated method java.util.concurrent.locks.ReentrantLock$Sync.lock()V [1]

      Exception: java.lang.StackOverflowError thrown from the UncaughtExceptionHandler in thread "Finalizer"
      ]
       exitValue = 1

      java.lang.RuntimeException: 'The Java thread stack size specified is too small' missing from stdout/stderr

      at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:221)
      at TooSmallStackSize.checkStack(TooSmallStackSize.java:132)
      at TooSmallStackSize.main(TooSmallStackSize.java:170)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1584)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'The Java thread stack size specified is too small' missing from stdout/stderr

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: